alignment issues

--- a/sass/elements/_sections.scss
+++ b/sass/elements/_sections.scss
@@ -224,9 +224,10 @@
     }
   }
   .subhead{
-    padding-left: 16.6%;
+    padding-left: 16.6%;padding-right: 0;
     @media screen and (max-width: $large){padding-left:12.5%;padding-bottom: 7%;}
     @media screen and (max-width: $medium+1){padding-left:10%;}
+    @media screen and (max-width: $small){padding-bottom: 0;}
     .mid{
       @media screen and (max-width: $small){padding-right: 10%;}
       h4{
@@ -312,6 +313,7 @@
       }
     }
     .tphone{
+      padding-right: 0;
       @media screen and (max-width: $small){margin: 0;padding: 0}}
   }
 }
